# bahai-songs-chordpro

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: deploy.yml
cli/: __init__.py  api.py  config.py  description.py  main.py  sheet.py  utils.py
scripts/: generate_youtube_description.py  pull.py
src/: a-century-ago.pro  a-lover-feareth-nothing.pro  agapa-me.pro  als-een-lamp.pro  amami.pro  apple-of-mine-eye.pro  armed.pro  banne-alles.pro  be-as-a-lamp.pro  be-generous.pro  be-thou-as-a-flame.pro  be-unrestrained-as-the-wind.pro  bear-and-endure.pro  bendito-es-el-sitio.pro  betrachte.pro  blazeno-je-tlo.pro  bleib-in-deiner-liebe-zu-mir.pro  blessed-2.pro  blessed-3.pro  blessed-gospel-version.pro  blessed-is-the-spot.pro  blessed.pro  budi-poput-luci.pro  corrobora.pro  das-wohlergehen-der-menschheit.pro  dein-paradies.pro  deine-staedte.pro  der-meistgeliebte.pro  der-verheissene.pro  der-wandel-der-menschenherzen.pro  die-besserung-der-welt.pro  die-erde-ist-nur-ein-land.pro  die-liebe-zu-dir.pro  dies-ist-der-tag.pro  do-not-despair.pro  durch-deine-liebe.pro  ein-reines-herz.pro  ernste-bemuehung.pro  erquicke.pro  everlasting.pro  (+118 more)
